# flang

./: .doxygen  .editorconfig  .gitignore  .stignore  CMakeLists.txt  Makefile  README.md  apt.txt  flang.fsproj
.config/: dotnet-tools.json
etc/: fstab
inc/: flang.hpp
lib/: AST.fs  apt.fs  cmake.fs  config.fs  cpp.fs  dirs.fs  flang.ini  giti.fs  main.fs  makefile.fs  meta.fs  meta.fsx  primitive.fs  project.fs  sdl.fs  skelex.fs
meta/: .clang-format  .doxygen  CMakeLists.txt  Makefile  apt.txt
meta/inc/: flang.hpp
meta/src/: flang.cpp
src/: flang.cpp  flang.lex  flang.yacc
